2011-12-01  Vangelis Kokkevis  <vangelis@chromium.org>

        Use ANGLE's texture_usage and texture_storage extensions when allocating compositor textures.
        https://bugs.webkit.org/show_bug.cgi?id=73621

        Add the necessary entry points and enums to GraphicsContext3D.

        Reviewed by Kenneth Russell.

        * public/platform/WebGraphicsContext3D.h:
        * src/Extensions3DChromium.cpp:
        (WebCore::Extensions3DChromium::texStorage2DEXT):
        * src/GraphicsContext3DChromium.cpp:
        * src/GraphicsContext3DPrivate.h:
        * tests/MockWebGraphicsContext3D.h:
        (WebKit::MockWebGraphicsContext3D::texStorage2DEXT):

2011-12-05  Adam Barth  <abarth@webkit.org>

        Another attempted build fix.

        * src/linux/WebFontInfo.cpp:

2011-12-05  Adam Barth  <abarth@webkit.org>

        Fix Linux build.

        * public/linux/WebFontInfo.h:

2011-12-05  Adam Barth  <abarth@webkit.org>

        [Chromium] Remove no-longer-used forwarding headers in the WebKit API
        https://bugs.webkit.org/show_bug.cgi?id=73845

        Reviewed by Darin Fisher.

        Delete unused forwarding headers and update includes to the new header
        locations.

        * WebKit.gyp:
        * bridge/PeerConnectionHandlerInternal.cpp:
        * bridge/PeerConnectionHandlerInternal.h:
        * public/WebArrayBuffer.h:
        * public/WebArrayBufferView.h: Removed.
        * public/WebAudioBus.h: Removed.
        * public/WebAudioDevice.h: Removed.
        * public/WebBlobData.h: Removed.
        * public/WebBlobRegistry.h: Removed.
        * public/WebCString.h: Removed.
        * public/WebCanvas.h: Removed.
        * public/WebClipboard.h: Removed.
        * public/WebColor.h: Removed.
        * public/WebColorName.h: Removed.
        * public/WebCommon.h: Removed.
        * public/WebCompositorInputHandler.h:
        * public/WebCookie.h: Removed.
        * public/WebCookieJar.h: Removed.
        * public/WebData.h: Removed.